sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:12: error: ';' expected but 'else' found.
     else if(i-j==0){
     ^